# aggregate-event-duality

./: .gitignore  Axum.md  Cargo.toml  README.md  TODO.txt  curl-examples.sh
data/: company1_post.json  company_bar_patch.json  company_bar_post.json  company_baz_patch.json  company_baz_post.json  company_foo_post.json  company_foo_put.json  curl.txt  person_fred_patch.json  person_fred_post.json  person_hans_patch.json  person_hans_post.json  person_inge_patch.json  person_inge_post.json
node/: client.js  consumer.js  package.json
src/: aggregator.rs  company_aggregate.rs  company_aggregate_dao.rs  company_event.rs  company_patch.rs  database.rs  domain.rs  http_server.rs  lib.rs  patch.rs  scheduler.rs
src/aggregate/: aggregator_trait.rs  mod.rs
src/aggregator/: aggregator_facade.rs  aggregator_trait.rs  company_aggregator.rs  location_aggregator.rs  mod.rs  person_aggregator.rs
src/business/: aggregator_facade.rs  aggregator_trait.rs  mod.rs  person_aggregator.rs
src/database/: company_aggregate_dao.rs  company_aggregate_table.rs  company_event_dao.rs  company_event_table.rs  company_revision_dao.rs  event_table.rs  location_aggregate_view.rs  location_table.rs  location_view.rs  mod.rs  person_aggregate_table.rs  person_event_table.rs  person_table.rs  revision_dao.rs  revision_table.rs
src/domain/: company_aggregate.rs  company_event.rs  company_post.rs  company_put.rs  company_rest.rs  event_type.rs  location_aggregate.rs  location_data.rs  location_event.rs  location_event_builder.rs  location_map.rs  location_patch.rs  mod.rs  person_aggregate.rs  person_data.rs  person_event.rs  person_event_builder.rs  person_id.rs  person_map.rs  person_patch.rs  person_rest.rs
src/rest/: event_fetcher.rs  http_server.rs  (+5 more)
(+8 files in other folders)
