[package]
name = "aggregate-event-duality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.1"
serde = { verdion = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
futures = "0.3.19"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
async-stream = "0.3.3"
const_format = "0.2.22"
lazy_static = "1.4.0"
warp = "0.3.2"
rand = "0.8.5"

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]