[package]
name = "aggregate-event-duality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
const_format = "0.2"
warp = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"

[dependencies.rusqlite]
version = "0.28"
features = ["bundled"]