[package]
name = "aggregate-event-duality"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21", features = ["full"] }
tokio-stream = "0.1"
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
const_format = "0.2"
axum = { version = "0.6", features = ["headers","macros"] }
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
thiserror = "1.0"
